--- a/week07-project/clint/src/components/StoreItems.css
+++ b/week07-project/clint/src/components/StoreItems.css
@@ -10,7 +10,7 @@
   }
   .add-item-form {
     flex: 1;
-    margin-right: 20px;
+    margin-right: 300px;
     padding: 40px;
     background-color: #f2f2f2;
     border-radius: 8px;
@@ -37,28 +37,9 @@
     background-color: #45a049;
   }
   
-  .store-items-info {
-    flex: 1;
-    text-align: right;
-    padding-right: 95px;
-   background-color: white;
+  .success-message{
+    font-size: 34px;
+    color: #01bb08fa;
+    background-color: white;
+    padding: 15px;
   }
-  
-  .store-items-info h2 {
-    text-align: right;
-    margin-bottom: 25px;
-    padding: 40px;
-    color: rgba(148, 56, 56, 0.856);
-    font-size: 20px;
-    
-  }
-  
-  .store-item {
-    padding-top: 25px;
-    color: #02ad0bf3;
-    font-size: 18px;
-    text-align: left;
-    padding-top: 10px;
-    
-  }
-  
