--- a/week07-project/clint/src/components/StoreItems.css
+++ b/week07-project/clint/src/components/StoreItems.css
@@ -10,7 +10,7 @@
   }
   .add-item-form {
     flex: 1;
-    margin-right: 300px;
+    margin-right: 30px;
     padding: 40px;
     background-color: #f2f2f2;
     border-radius: 8px;
@@ -37,9 +37,21 @@
     background-color: #45a049;
   }
   
-  .success-message{
-    font-size: 34px;
-    color: #01bb08fa;
-    background-color: white;
-    padding: 15px;
+  .items-list {
+    margin-left: 30px;
+    padding: 40px;
+    background-color: #f2f2f2;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .items-list h2 {
+    color: #c40f0f; 
+  }
+  
+  .items-list p {
+    color: #06f08e; 
+    margin: 5px 0; 
+    padding-top: 10px;
+    font-size: 24px;
   }
